[package]
name = "protocole-exquis"
version = "0.1.0"
authors = ["Benjamin Lipp <blipp@benjaminlipp.de>"]
edition = "2018"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
actix = "0.9"
actix-broker = "0.3.0"
actix-files = "0.2"
actix-rt = "1.1"
actix-web = "2.0"
actix-web-actors = "2.0"
env_logger = "0.7"
futures = "0.3"
log = "0.4"
rand = "0.7"
chrono = "0.4"
diesel = { version = "1.4.5", features = ["r2d2", "mysql", "chrono"]}
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
serde = "1.0.115"
serde_json = "1.0.57"